Commit edits to center items, plus edits to typos.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <br>
       <a><img src="assets/img/favicon.png" alt="" class="img-fluid"></a>
       <br>
-      <h2>A group of talanted engineers.</h2>
+      <h2>A group of talented engineers.</h2>
       <div class="d-flex">
         <a href="https://www.youtube.com/watch?v=sM_Ot7vZu9g&t=1s" class="venobox btn-watch-video" data-vbtype="video"
           data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>
@@ -119,9 +119,9 @@
         </style>
         <h1>Our Team Status</h1>
         <h6>Updated: 2020</h6>
-        <div class="row justify-content-end">
+        <div class="general-row justify-content-end">
           <div class="col-lg-11">
-            <div class="row justify-content-end">
+            <div class="general-row">
 
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
@@ -224,7 +224,7 @@
                 <p class="card-text">The competitions we enter require the fields of Mechanical, Computer,
                   Electrical, Chemical, Software, and Aerospace Engineering along with other STEM fields
                   such as Computer Science, Geology, Chemistry, and Physics.
-                  Our Business team also looks for people with any kind of business background.
+                  Our Business team also looks for people with any kind of business or communications background.
                   We accept students from all walks of engineering, science and business.
                 </p>
               </div>
@@ -362,7 +362,7 @@
           <h3>2020</h3>
         </div>
 
-        <div class="row">
+        <div class="general-row">
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
@@ -378,7 +378,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="pic"><img src="assets/img/leads/team-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Smruthi Danda</h4>
+                <h4>Quan Le</h4>
                 <span>Electrical Lead</span>
               </div>
             </div>
@@ -410,6 +410,16 @@
               <div class="member-info">
                 <h4>Vishnu Adda</h4>
                 <span>Mission Control Lead</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/leads/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Richard Ngo</h4>
+                <span>Science Lead</span>
               </div>
             </div>
           </div>
@@ -475,9 +485,9 @@
   <footer id="footer">
     <div class="footer-top">
       <div class="container">
-        <div class="row">
+        <div class="general-row">
 
-          <div class="col-lg-3 col-md-6">
+          <div class="general-row col-lg-3 col-md-6">
             <div class="footer-info">
               <p>Follow Our Socials!</p>
               <div class="social-links mt-3">
