--- a/gallery.html
+++ b/gallery.html
@@ -48,7 +48,7 @@
           <li class="drop-down">
             <a href="">Learn More</a>
             <ul>
-              <li><a href="calendar.html">Calendar</a></li>
+              <li><a href="https://calendar.google.com/calendar/embed?src=sjsurobotics%40gmail.com&ctz=America%2FLos_Angeles">Calendar</a></li>
               <li><a href="competitions.html">Competitions</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="pastLeads.html">Past Leads</a></li>
