--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="#lead">Leads</a></li>
           <li class="drop-down"><a href="">Learn More</a>
             <ul>
-              <li><a href="calendar.html">Calendar</a></li>
+              <li><a href="https://calendar.google.com/calendar/embed?src=sjsurobotics%40gmail.com&ctz=America%2FLos_Angeles">Calendar</a></li>
               <li><a href="competitions.html">Competitions</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="pastLeads.html">Past Leads</a></li>
