--- a/pastLeads.html
+++ b/pastLeads.html
@@ -59,6 +59,7 @@
                 <li>
                   <a
                     href="https://calendar.google.com/calendar/embed?src=sjsurobotics%40gmail.com&ctz=America%2FLos_Angeles"
+                    target="_blank"
                     >Calendar</a
                   >
                 </li>
