Updated the background image to be a gif.

--- a/index.html
+++ b/index.html
@@ -78,10 +78,14 @@
       <br>
       <h2>A group of talented engineers.</h2>
       <div class="d-flex">
-        <a href="https://www.youtube.com/watch?v=sM_Ot7vZu9g&t=1s" class="venobox btn-watch-video" data-vbtype="video"
+        <a href="https://www.youtube.com/watch?v=shVuYxo-rjA" class="venobox btn-watch-video" data-vbtype="video"
           data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>
       </div>
     </div>
+    <video autoplay loop muted id="video" class="hidden-xs hidden-sm" style="position: absolute; z-index: -1; left:0px; bottom:0px; min-width:100%; min-height:100%; text-align:center;">
+      <source src="assets/video/Robotics-Header-Video-2016.webm" type='video/webm'>
+      Your browser does not support the <code>video</code> element.
+    </video>
   </section>
   <!-- ======= End Home Section ======= -->
 
@@ -94,12 +98,12 @@
 
       Total Memebers : 28 [including leads]
 
-      Control Systems : 7 members
+      Control Systems : 4 members
       Mission Control : 2 members
-      Science : 2 members
-      Business : 1 memeber
-      Mechanical : 6 members
-      Electrical : 5 members
+      Science : 1 members
+      Business : 2 memeber
+      Mechanical : 4 members
+      Electrical : 4 members
       Intelligent Systems : 5 members
 
       Using these values as a percentage for section below.
@@ -118,7 +122,7 @@
           }
         </style>
         <h1>Our Team Status</h1>
-        <h6>Updated: 2020</h6>
+        <h6>Updated: July 2020</h6>
         <div class="general-row justify-content-end">
           <div class="col-lg-11">
             <div class="general-row">
@@ -126,7 +130,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-gears"></i>
-                  <span data-toggle="counter-up">21</span>
+                  <span data-toggle="counter-up">4</span>
                   <p>Mechanical</p>
                 </div>
               </div>
@@ -134,7 +138,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-chart-flow-2"></i>
-                  <span data-toggle="counter-up">18</span>
+                  <span data-toggle="counter-up">4</span>
                   <p>Electrical</p>
                 </div>
               </div>
@@ -142,7 +146,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-binary"></i>
-                  <span data-toggle="counter-up">25</span>
+                  <span data-toggle="counter-up">4</span>
                   <p>Control Systems</p>
                 </div>
               </div>
@@ -150,7 +154,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-computer"></i>
-                  <span data-toggle="counter-up">18</span>
+                  <span data-toggle="counter-up">5</span>
                   <p>Intelligent Systems</p>
                 </div>
               </div>
@@ -158,7 +162,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-console"></i>
-                  <span data-toggle="counter-up">7</span>
+                  <span data-toggle="counter-up">2</span>
                   <p>Mission Control</p>
                 </div>
               </div>
@@ -166,7 +170,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-dashboard-web"></i>
-                  <span data-toggle="counter-up">4</span>
+                  <span data-toggle="counter-up">2</span>
                   <p>Business</p>
                 </div>
               </div>
@@ -174,7 +178,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-test-tube-alt"></i>
-                  <span data-toggle="counter-up">7</span>
+                  <span data-toggle="counter-up">1</span>
                   <p>Science</p>
                 </div>
               </div>
@@ -182,7 +186,6 @@
             </div>
           </div>
         </div>
-        <h6 style="font-size: 60%">*as a percentage</h6>
       </div>
     </section>
     <!-- ======= End About Section ======= -->
@@ -318,7 +321,7 @@
         <div class="owl-carousel gallery-carousel">
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/gallery-1.png" class="gallery-img" alt="">
+            <img src="assets/img/gallery/gallery-1.JPG" class="gallery-img" alt="">
           </div>
 
           <div class="gallery-item">
@@ -366,7 +369,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/David-Dias.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>David Dias</h4>
                 <span>President & Mechanical Lead</span>
@@ -396,7 +399,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Pushpal-Patil.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Pushpal Patil</h4>
                 <span>Intelligent Systems Lead</span>
@@ -406,7 +409,17 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Yosef-Mirsky.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Yosef Mirsky</h4>
+                <span>Intelligent Systems Lead</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/leads/Vishnu-Adda.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Vishnu Adda</h4>
                 <span>Mission Control Lead</span>
