Changed Contact Us section

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <h3>General Meetings</h3>
                 <p>San Jose State University</p>
                 <p>Saturday 12 pm to 2 pm</p>
-                <p>Room : ENGR 391/393</p>
+                <a href="https://www.google.com/maps/dir//Charles+W.+Davidson+College+of+Engineering,+1+Washington+Square,+San+Jose,+CA+95192/@37.337644,-121.9517736,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x808fccbf9c49ae69:0x33714fc7762af269!2m2!1d-121.8817336!2d37.3376646" target="_blank">Room : ENGR 391/393</a><br>
               </div>
               <br>
             </div>
@@ -464,7 +464,7 @@
               <div class="info-box">
                 <i class="bx bx-envelope"></i>
                 <h3>Email Us</h3>
-                <p>sjsurobotics@gmail.com</p>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sjsurobotics@gmail.com" target="_blank">sjsurobotics@gmail.com</a>
               </div>
             </div>
 
@@ -508,6 +508,7 @@
 
     <div class="container">
       <div class="copyright">
+        &copy; Copyright <strong><span>Dewi</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
