--- a/competitions.html
+++ b/competitions.html
@@ -285,7 +285,8 @@
 
       <div class="container">
         <div class="copyright">
-          <!-- &copy; Copyright <strong><span>Dewi</span></strong>. All Rights Reserved -->
+          &copy; Copyright <strong><span>Dewi</span></strong
+          >. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
