Change some images and add a 'join' form.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <li><a href="competitions.html">Competitions</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="pastLeads.html">Past Leads</a></li>
-              <li><a href="volunteering.html">Volunteering</a></li>
+              <!-- <li><a href="volunteering.html">Volunteering</a></li> -->
             </ul>
           </li>
           <li><a href="#contact">Contact</a></li>
@@ -197,7 +197,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-boxes-1.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/aboutBoxes/about-box-project.JPG" class="card-img-top" alt="...">
               <div class="card-icon">
                 <i class="icofont-ui-calendar"></i>
               </div>
@@ -217,7 +217,7 @@
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-boxes-2.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/aboutBoxes/about-box-join.JPG" class="card-img-top" alt="...">
               <div class="card-icon">
                 <i class="icofont-users-alt-4"></i>
               </div>
@@ -236,7 +236,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-boxes-3.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/aboutBoxes/about-box-team.JPG" class="card-img-top" alt="...">
               <div class="card-icon">
                 <i class="icofont-people"></i>
               </div>
@@ -369,7 +369,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/David-Dias.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/David-Dias.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>David Dias</h4>
                 <span>President & Mechanical Lead</span>
@@ -379,7 +379,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Quan_Le.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Quan Le</h4>
                 <span>Electrical Lead</span>
@@ -389,7 +389,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Nathanael-Garza.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Nathaneal Garza </h4>
                 <span>Control Systems Lead</span>
@@ -399,7 +399,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Pushpal-Patil.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Pushpal-Patil.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Pushpal Patil</h4>
                 <span>Intelligent Systems Lead</span>
@@ -409,7 +409,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Yosef-Mirsky.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Yosef-Mirsky.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Yosef Mirsky</h4>
                 <span>Intelligent Systems Lead</span>
@@ -419,20 +419,10 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Vishnu-Adda.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Vishnu-Adda.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Vishnu Adda</h4>
                 <span>Mission Control Lead</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/team-1.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Richard Ngo</h4>
-                <span>Science Lead</span>
               </div>
             </div>
           </div>
@@ -473,11 +463,19 @@
               <br>
             </div>
 
-            <div class="col-md-12">
+            <div class="col-md-12" style="margin-bottom: 25px;">
               <div class="info-box">
                 <i class="bx bx-envelope"></i>
                 <h3>Email Us</h3>
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sjsurobotics@gmail.com" target="_blank">sjsurobotics@gmail.com</a>
+              </div>
+            </div>
+
+            <div class="col-md-12">
+              <div class="info-box">
+                <i class="bx bx-down-arrow-alt"></i>
+                <h3>Want to Join?</h3>
+                <a href="https://forms.gle/Bfp9JQMfPSsHxMft8" target="_blank">Click Here</a>
               </div>
             </div>
 
