--- a/pastLeads.html
+++ b/pastLeads.html
@@ -66,7 +66,7 @@
                 <li><a href="competitions.html">Competitions</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="pastLeads.html">Past Leads</a></li>
-                <li><a href="voluntering.html">Volunteering</a></li>
+                <!-- <li><a href="voluntering.html">Volunteering</a></li> -->
               </ul>
             </li>
           </ul>
