--- a/competitions.html
+++ b/competitions.html
@@ -66,7 +66,7 @@
                 <li><a href="competitions.html">Competitions</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="pastLeads.html">Past Leads</a></li>
-                <li><a href="volunteering.html">Volunteering</a></li>
+                <!-- <li><a href="volunteering.html">Volunteering</a></li> -->
               </ul>
             </li>
           </ul>
@@ -107,7 +107,7 @@
               <div class="pic">
                 <div class="img-container">
                   <img
-                    src="assets/img/gallery/gallery-2.JPG"
+                    src="assets/img/gallery/2019-competition.JPG"
                     class="img-fluid"
                     alt=""
                   />
