--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
               <li><a href="competitions.html">Competitions</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="pastLeads.html">Past Leads</a></li>
-              <li><a href="volunteering.html">Volunteering</a></li>
+              <!-- <li><a href="volunteering.html">Volunteering</a></li> -->
             </ul>
           </li>
         </ul>
