--- a/gallery.html
+++ b/gallery.html
@@ -219,8 +219,9 @@
   <footer id="footer">
     <div class="footer-top">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
+        <div class="general-row">
+
+          <div class="general-row col-lg-3 col-md-6">
             <div class="footer-info">
               <p>Follow Our Socials!</p>
               <div class="social-links mt-3">
@@ -240,9 +241,6 @@
     </div>
 
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Dewi</span></strong>. All Rights Reserved
-      </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
