--- a/pastLeads.html
+++ b/pastLeads.html
@@ -222,35 +222,20 @@
     <footer id="footer">
       <div class="footer-top">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6">
+          <div class="general-row">
+  
+            <div class="general-row col-lg-3 col-md-6">
               <div class="footer-info">
                 <p>Follow Our Socials!</p>
                 <div class="social-links mt-3">
-                  <a
-                    href="https://www.linkedin.com/company/sjsu-robotics/"
-                    target="_blank"
-                    class="linkedin"
-                    ><i class="bx bxl-linkedin"></i
-                  ></a>
-                  <a
-                    href="https://www.youtube.com/channel/UCDNJ42eBvpGorWPbrqbAXJQ"
-                    target="_blank"
-                    class="youtube"
-                    ><i class="bx bxl-youtube"></i
-                  ></a>
-                  <a
-                    href="https://www.facebook.com/Robotics-Club-at-SJSU-145015472212809/"
-                    target="_blank"
-                    class="facebook"
-                    ><i class="bx bxl-facebook"></i
-                  ></a>
-                  <a
-                    href="https://twitter.com/sjsurobotics"
-                    target="_blank"
-                    class="twitter"
-                    ><i class="bx bxl-twitter"></i
-                  ></a>
+                  <a href="https://www.linkedin.com/company/sjsu-robotics/" target="_blank" class="linkedin"><i
+                      class="bx bxl-linkedin"></i></a>
+                  <a href="https://www.youtube.com/channel/UCDNJ42eBvpGorWPbrqbAXJQ" target="_blank" class="youtube"><i
+                      class="bx bxl-youtube"></i></a>
+                  <a href="https://www.facebook.com/Robotics-Club-at-SJSU-145015472212809/" target="_blank"
+                    class="facebook"><i class="bx bxl-facebook"></i></a>
+                  <a href="https://twitter.com/sjsurobotics" target="_blank" class="twitter"><i
+                      class="bx bxl-twitter"></i></a>
                 </div>
               </div>
             </div>
@@ -259,10 +244,6 @@
       </div>
 
       <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Dewi</span></strong
-          >. All Rights Reserved
-        </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
