Crop the 'Our Team' png.

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-box-team.JPG" class="card-img-top" alt="...">
+              <img src="assets/img/aboutBoxes/about-box-team.png" class="card-img-top" alt="...">
               <div class="card-icon">
                 <i class="icofont-people"></i>
               </div>
