--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
               <div class="pic"><img src="assets/img/leads/Pushpal-Patil.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Pushpal Patil</h4>
-                <span>Intelligent Systems Lead</span>
+                <span>Autonomy Co-Lead</span>
               </div>
             </div>
           </div>
@@ -412,7 +412,7 @@
               <div class="pic"><img src="assets/img/leads/Yosef-Mirsky.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Yosef Mirsky</h4>
-                <span>Intelligent Systems Lead</span>
+                <span>Autonomy Co-Lead</span>
               </div>
             </div>
           </div>
@@ -422,7 +422,7 @@
               <div class="pic"><img src="assets/img/leads/Vishnu-Adda.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Vishnu Adda</h4>
-                <span>Mission Control Lead</span>
+                <span>Treasurer & Mission Control Lead</span>
               </div>
             </div>
           </div>
