Change 'Nathaneal' to 'Nathanael.'

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="pic"><img src="assets/img/leads/Nathanael-Garza.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Nathaneal Garza </h4>
+                <h4>Nathanael Garza </h4>
                 <span>Control Systems Lead</span>
               </div>
             </div>
