Add Gabby to the leads section.

--- a/index.html
+++ b/index.html
@@ -369,16 +369,6 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/David-Dias.png" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>David Dias</h4>
-                <span>President & Mechanical Lead</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="pic"><img src="assets/img/leads/Quan_Le.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Quan Le</h4>
@@ -423,6 +413,26 @@
               <div class="member-info">
                 <h4>Vishnu Adda</h4>
                 <span>Treasurer & Mission Control Lead</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/leads/Gabrielle-Dominguez.png" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Gabrielle Dominguez</h4>
+                <span>Business Lead</span>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-2">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/leads/David-Dias.png" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>David Dias</h4>
+                <span>President & Mechanical Lead</span>
               </div>
             </div>
           </div>
