--- a/index.html
+++ b/index.html
@@ -308,6 +308,14 @@
             <img src="assets/img/sponsors/TMS.png" class="img-fluid" alt="">
           </div>
 
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/sponsors/hamamatsu.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/sponsors/khalil.png" class="img-fluid" alt="">
+          </div>
+
         </div>
 
       </div>
