--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           }
         </style>
         <h1>Our Team Status</h1>
-        <h6>Updated: July 2020</h6>
+        <h6>Updated: April 2021</h6>
         <div class="general-row justify-content-end">
           <div class="col-lg-11">
             <div class="general-row">
@@ -138,7 +138,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-chart-flow-2"></i>
-                  <span data-toggle="counter-up">4</span>
+                  <span data-toggle="counter-up">2</span>
                   <p>Electrical</p>
                 </div>
               </div>
@@ -154,7 +154,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-computer"></i>
-                  <span data-toggle="counter-up">5</span>
+                  <span data-toggle="counter-up">7</span>
                   <p>Intelligent Systems</p>
                 </div>
               </div>
@@ -162,7 +162,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-console"></i>
-                  <span data-toggle="counter-up">2</span>
+                  <span data-toggle="counter-up">1</span>
                   <p>Mission Control</p>
                 </div>
               </div>
@@ -170,7 +170,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-dashboard-web"></i>
-                  <span data-toggle="counter-up">2</span>
+                  <span data-toggle="counter-up">1</span>
                   <p>Business</p>
                 </div>
               </div>
@@ -370,7 +370,7 @@
             }
           </style>
           <h1>Meet Our Leads</h1>
-          <h3>2020</h3>
+          <h3>2021</h3>
         </div>
 
         <div class="general-row">
@@ -397,20 +397,10 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Pushpal-Patil.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Mason-Sage.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Pushpal Patil</h4>
-                <span>Autonomy Co-Lead</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Yosef-Mirsky.png" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Yosef Mirsky</h4>
-                <span>Autonomy Co-Lead</span>
+                <h4>Mason Sage</h4>
+                <span>Autonomy Lead</span>
               </div>
             </div>
           </div>
