Change some leads.

--- a/index.html
+++ b/index.html
@@ -377,10 +377,10 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Quan_Le.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Santosh-Dasari.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Quan Le</h4>
-                <span>Electrical Lead</span>
+                <h4>Santosh Dasari</h4>
+                <span>Mechanical Lead</span>
               </div>
             </div>
           </div>
@@ -389,18 +389,8 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="pic"><img src="assets/img/leads/Nathanael-Garza.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Nathanael Garza </h4>
+                <h4>Nathanael Garza</h4>
                 <span>Control Systems Lead</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Mason-Sage.png" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Mason Sage</h4>
-                <span>Autonomy Lead</span>
               </div>
             </div>
           </div>
@@ -417,20 +407,10 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Gabrielle-Dominguez.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Mason-Sage.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Gabrielle Dominguez</h4>
-                <span>Business Lead</span>
-              </div>
-            </div>
-          </div>
-          
-          <div class="col-lg-2">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/David-Dias.png" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>David Dias</h4>
-                <span>President & Mechanical Lead</span>
+                <h4>Mason Sage</h4>
+                <span>President & Autonomy Lead</span>
               </div>
             </div>
           </div>
