--- a/index.html
+++ b/index.html
@@ -376,6 +376,16 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/leads/Maxim-Vovenko.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Maxim Vovenko</h4>
+                <span>Electrical Lead</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="pic"><img src="assets/img/leads/Santosh-Dasari.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Santosh Dasari</h4>
