Past leads update and calendar removal.

--- a/pastLeads.html
+++ b/pastLeads.html
@@ -214,7 +214,75 @@
             </div>
           </div>
         </div>
+
       </div>
+
+      <!-- <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <style>
+            h1 {
+              text-align: center;
+            }
+
+            h3 {
+              text-align: center;
+            }
+          </style>
+          <h1>Leads</h1>
+          <h3>2019-2020</h3> -->
+
+          <!-- <div class="row"> -->
+
+            <!-- <div class="col-lg-2">
+              <div class="member" data-aos="fade-up" data-aos-delay="100">
+                <div class="pic">
+                  <img
+                    src="assets/img/past-leads/colin.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <div class="member-info">
+                  <h4>Colin Schardt</h4>
+                  <span>President & Control Systems Lead</span>
+                </div>
+              </div>
+            </div> -->
+
+            <!-- <div class="col-lg-2">
+              <div class="member" data-aos="fade-up" data-aos-delay="100">
+                <div class="pic">
+                  <img
+                    src="assets/img/past-leads/David-Dias.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <div class="member-info">
+                  <h4>David Dias</h4>
+                  <span>Mechanical Lead</span>
+                </div>
+              </div>
+            </div> -->
+
+            <!-- <div class="col-lg-2">
+              <div class="member" data-aos="fade-up" data-aos-delay="100">
+                <div class="pic">
+                  <img
+                    src="assets/img/past-leads/David-Dias.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <div class="member-info">
+                  <h4>Vishnu Adda</h4>
+                  <span>Mission Control Lead</span>
+                </div>
+              </div>
+            </div> -->
+
+          <!-- </div> -->
+        <!-- </div> -->
     </section>
     <!-- ======= End Past Leads Section ======= -->
 
