Minor Image Optimization

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-box-project.JPG" class="card-img-top" alt="...">
+              <img src="assets/img/aboutBoxes/about-box-project.jpeg" class="card-img-top" alt="...">
               <div class="card-icon">
                 <i class="icofont-ui-calendar"></i>
               </div>
@@ -216,7 +216,7 @@
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-box-join.JPG" class="card-img-top" alt="...">
+              <img src="assets/img/aboutBoxes/about-box-join.jpeg" class="card-img-top" alt="...">
               <div class="card-icon">
                 <i class="icofont-users-alt-4"></i>
               </div>
@@ -235,7 +235,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
-              <img src="assets/img/aboutBoxes/about-box-team.png" class="card-img-top" alt="...">
+              <img src="assets/img/aboutBoxes/about-box-team.jpeg" class="card-img-top" alt="...">
               <div class="card-icon">
                 <i class="icofont-people"></i>
               </div>
@@ -328,23 +328,23 @@
         <div class="owl-carousel gallery-carousel">
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/gallery-1.JPG" class="gallery-img" alt="">
+            <img src="assets/img/gallery/gallery-1.jpeg" class="gallery-img" alt="">
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/gallery-2.JPG" class="gallery-img" alt="">
+            <img src="assets/img/gallery/gallery-2.jpeg" class="gallery-img" alt="">
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/gallery-3.JPG" class="gallery-img" alt="">
+            <img src="assets/img/gallery/gallery-3.jpeg" class="gallery-img" alt="">
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/gallery-4.JPG" class="gallery-img" alt="">
+            <img src="assets/img/gallery/gallery-4.jpeg" class="gallery-img" alt="">
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/gallery-5.JPG" class="gallery-img" alt="">
+            <img src="assets/img/gallery/gallery-5.jpeg" class="gallery-img" alt="">
 
           </div>
 
@@ -376,7 +376,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Maxim-Vovenko.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Maxim-Vovenko.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Maxim Vovenko</h4>
                 <span>Electrical Lead</span>
@@ -386,7 +386,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Santosh-Dasari.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Santosh-Dasari.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Santosh Dasari</h4>
                 <span>Mechanical Lead</span>
@@ -396,7 +396,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Nathanael-Garza.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Nathanael-Garza.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Nathanael Garza</h4>
                 <span>Control Systems Lead</span>
@@ -406,7 +406,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Vishnu-Adda.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Vishnu-Adda.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Vishnu Adda</h4>
                 <span>Treasurer & Mission Control Lead</span>
@@ -416,7 +416,7 @@
 
           <div class="col-lg-2">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/leads/Mason-Sage.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/leads/Mason-Sage.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Mason Sage</h4>
                 <span>President & Autonomy Lead</span>
