--- a/competitions.html
+++ b/competitions.html
@@ -107,7 +107,7 @@
               <div class="pic">
                 <div class="img-container">
                   <img
-                    src="assets/img/gallery/2019-competition.JPG"
+                    src="assets/img/gallery/2019-competition.jpeg"
                     class="img-fluid"
                     alt=""
                   />
@@ -136,7 +136,7 @@
               <div class="pic">
                 <div class="img-container">
                   <img
-                    src="assets/img/gallery/gallery-3.JPG"
+                    src="assets/img/gallery/gallery-3.jpeg"
                     class="img-fluid"
                     alt=""
                   />
@@ -165,7 +165,7 @@
               <div class="pic">
                 <div class="img-container">
                   <img
-                    src="assets/img/gallery/gallery-4.JPG"
+                    src="assets/img/gallery/gallery-4.jpeg"
                     class="img-fluid"
                     alt=""
                   />
@@ -194,7 +194,7 @@
               <div class="pic">
                 <div class="img-container">
                   <img
-                    src="assets/img/gallery/gallery-5.JPG"
+                    src="assets/img/gallery/gallery-5.jpeg"
                     class="img-fluid"
                     alt=""
                   />
@@ -222,7 +222,7 @@
               <div class="pic">
                 <div class="img-container">
                   <img
-                    src="assets/img/gallery/gallery-2.JPG"
+                    src="assets/img/gallery/gallery-2.jpeg"
                     class="img-fluid"
                     alt=""
                   />
