--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,16 @@
   <meta content="" name="keywords" />
 
   <!-- Favicon -->
-  <link href="assets/img/favicon.png" rel="icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=1">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=1">
+  <link rel="manifest" href="/site.webmanifest?v=1">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg?v=1" color="#5bbad5">
+  <link rel="shortcut icon" href="/favicon.ico?v=1">
+  <meta name="apple-mobile-web-app-title" content="SJSU Robotics">
+  <meta name="application-name" content="SJSU Robotics">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- Google Fonts -->
   <link
