--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="home-container" data-aos="fade-up" data-aos-delay="150">
       <h1>We are the San Jose State University Robotics Team.</h1>
       <br>
-      <a><img src="assets/img/favicon.png" alt="" class="img-fluid"></a>
+      <a><img src="assets/img/favicon.png" alt="" class="img-fluid" width="150" height="146"></a>
       <br>
       <h2>A group of talented engineers.</h2>
       <div class="d-flex">
