Minor Rewording Description for SEO

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>SJSU Robotics</title>
 
   <!-- Metadata For Search Engines-->
-
-  <meta name="descriptison" content="The San Jose State University Robotics Team is a student-driven multi-disciplinary team with an emphasis in robotics design working to transform academic knowledge into practical skills.">
+  <!-- Keep Description between 150-165 Charecters (including White Spaces)-->
+  <meta name="descriptison" content="The San Jose State University Robotics Team is a student-driven multi-discipline team working to apply academic knowledge into practical skills through robot design.">
   <meta property="og:title" content="SJSU Robotics"/>
   <meta property="og:type" content="website"/>
   <meta property="og:image" content="https://www.sjsurobotics.org/assets/img/big-logo.png"/>
