Added Meta Data for better Seach Optimization (#21)
* Added Meta Data for better Seach Optimization
* Minor Rewording Description for SEO

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>SJSU Robotics</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+
+  <!-- Metadata For Search Engines-->
+  <!-- Keep Description between 150-165 Charecters (including White Spaces)-->
+  <meta name="descriptison" content="The San Jose State University Robotics Team is a student-driven multi-discipline team working to apply academic knowledge into practical skills through robot design.">
+  <meta property="og:title" content="SJSU Robotics"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:image" content="https://www.sjsurobotics.org/assets/img/big-logo.png"/>
+  <meta property="og:url" content="https://www.sjsurobotics.org/">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "url": "https://www.sjsurobotics.org",
+      "logo": "https://www.sjsurobotics.org/assets/img/big-logo.png"
+    }
+    </script>
 
   <!-- Favicon -->
   <link href="assets/img/favicon.png" rel="icon">
