Tiny Little Fix

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="descriptison" content="The San Jose State University Robotics Team is a student-driven multi-discipline team working to apply academic knowledge into practical skills through robot design.">
   <meta property="og:title" content="SJSU Robotics"/>
   <meta property="og:type" content="website"/>
+  <meta property="og:description" content="The San Jose State University Robotics Team is a student-driven multi-discipline team working to apply academic knowledge into practical skills through robot design."/>
   <meta property="og:image" content="https://www.sjsurobotics.org/assets/img/big-logo.png"/>
   <meta property="og:url" content="https://www.sjsurobotics.org/">
   <script type="application/ld+json">
