--- a/index.html
+++ b/index.html
@@ -52,6 +52,23 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <!-- Analytics -->
+  <script>
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "991s0kxzf5");
+  </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HF3368RYSS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-HF3368RYSS');
+  </script>
+
   <!-- =======================================================
   * Template Name: Dewi - v2.0.0
   * Template URL: https://bootstrapmade.com/dewi-free-multi-purpose-html-template/
