--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 
   <title>SJSU Robotics</title>
 
-  <!-- Metadata For Search Engines-->
+  <!-- Metadata-->
+  <meta http-equiv='content-language' content='en-us'>
+  <link href="https://www.sjsurobotics.org" rel="canonical" />
   <!-- Keep Description between 150-165 Charecters (including White Spaces)-->
-  <meta name="descriptison" content="The San Jose State University Robotics Team is a student-driven multi-discipline team working to apply academic knowledge into practical skills through robot design.">
+  <meta name="description" content="The San Jose State University Robotics Team is a student-driven multi-discipline team working to apply academic knowledge into practical skills through robot design.">
+  <!-- OpenGraph Metadata-->
   <meta property="og:title" content="SJSU Robotics"/>
   <meta property="og:type" content="website"/>
   <meta property="og:description" content="The San Jose State University Robotics Team is a student-driven multi-discipline team working to apply academic knowledge into practical skills through robot design."/>
@@ -82,10 +85,10 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <h1 class="logo"><a href="index.html">SJSU Robotics</a></h1>
+      <h1 class="logo"><a href="/">SJSU Robotics</a></h1>
 
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/favicon.png" alt="" class="img-fluid"></a> -->
+      <!-- <a href="/" class="logo"><img src="assets/img/favicon.png" alt="" class="img-fluid"></a> -->
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
