--- a/gallery.html
+++ b/gallery.html
@@ -5,9 +5,11 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-  <title>SJSU Robotics</title>
-  <meta content="" name="descriptison" />
-  <meta content="" name="keywords" />
+  <title>SJSU Robotics - Gallery</title>
+  <!-- Keep Description between 150-165 Charecters (including White Spaces)-->
+  <meta name="description" content="SJSU Robotics list of photo galleries and publications showing previous events that were participated in by members of the club.">
+
+  <meta http-equiv='content-language' content='en-us'>
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
@@ -66,11 +68,11 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <h1 class="logo"><a href="index.html">SJSU Robotics</a></h1>
+      <h1 class="logo"><a href="/">SJSU Robotics</a></h1>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li class="drop-down">
             <a href="">Learn More</a>
             <ul>
