--- a/pastLeads.html
+++ b/pastLeads.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>SJSU Robotics</title>
-    <meta content="" name="descriptison" />
-    <meta content="" name="keywords" />
+    <title>SJSU Robotics - Past Leads</title>
+    <!-- Keep Description between 150-165 Charecters (including White Spaces)-->
+    <meta name="description" content="List of members who were previously in positions of Leadership in SJSU Robotics.">
+
+    <meta http-equiv='content-language' content='en-us'>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
@@ -57,11 +59,11 @@
       <div
         class="container-fluid d-flex align-items-center justify-content-between"
       >
-        <h1 class="logo"><a href="index.html">SJSU Robotics</a></h1>
+        <h1 class="logo"><a href="/">SJSU Robotics</a></h1>
 
         <nav class="nav-menu d-none d-lg-block">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li class="drop-down">
               <a href="">Learn More</a>
               <ul>
